style.css
/* basic settings */
* {
  box-sizing: border-box;
}
body {
  padding: 0;
  margin: 0;
  letter-spacing: 0.05rem;
  font-family: "Ubuntu", sans-serif;
}
/* root colors */
:root {
  --bg-color: #d1fafa;
  --label-color: #546464;
  --outline-color: #449393;
  --input-bg-color: #d1fafa68;
  --btn-color: #09504e;
  --btn-hover-color: #6edad6b3;
}
/* status calss*/
.btns input.active {
  background-color: var(--bg-color);
  color: var(--btn-color);
}

.outer-container {
  height: 100vh;
  background-color: var(--bg-color);
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.title {
  letter-spacing: 0.4rem;
  font-weight: bold;
  color: var(--label-color);
  margin-bottom: 2rem;
}

.inner-container {
  width: 70vw;
  margin: 1rem;
  max-width: 1200px;
  background-color: #ffffff;
  display: flex;
  border-radius: 1rem;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
}

.section {
  padding: 1.5rem;
}

/*************** left-section ***************/
.left-section {
  flex: 1;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  justify-content: space-between;
}
.bill-input {
  display: flex;
  flex-direction: column;
  position: relative;
}
.bill-input label {
  font-size: 0.9rem;
  color: var(--label-color);
  margin-bottom: 0.5rem;
}
.bill-input input,
.people-input input {
  padding: 10px 25px;
  width: 100%;
  outline-style: solid;
  outline-color: var(--outline-color);
  border: 0;
  border-radius: 0.5rem;
  color: var(--outline-color);
  background-color: var(--input-bg-color);
  font-weight: bold;
  font-size: 1.5rem;
  text-align: right;
}
.bill-input i,
.people-input i {
  position: absolute;
  top: 59%;
  left: 30px;
  color: var(--outline-color);
}
.tips {
  position: relative;
}
.tips p {
  margin: 0;
  font-size: 0.9rem;
  color: var(--label-color);
  margin-bottom: 0.5rem;
}

.tips .customTip {
  outline-style: initial;
  outline-color: var(--outline-color);
  border: 0;
  text-align: center;
  -moz-appearance: textfield; /* Firefox */
}
.tips .customTip::-webkit-inner-spin-button,
.tips .customTip::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.btns {
  display: grid;
  grid-template-columns: repeat(3, minmax(100px, 1fr));
  gap: 0.5rem;
}
.btns input {
  border: 0;
  background-color: var(--btn-color);
  padding: 10px;
  border-radius: 0.25rem;
  color: #ffffff;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  transition: 0.2s;
}
.btns input:last-child {
  background-color: var(--input-bg-color);
  color: var(--label-color);
}
.btns input:hover,
.btns input:focus {
  background-color: var(--btn-hover-color);
  color: var(--btn-color);
}
.people-input {
  position: relative;
}
.bill-input span,
.tips span,
.people-input span {
  color: #fa5252;
  position: absolute;
  top: 3px;
  right: 0;
  display: none;
}
.people-input label {
  color: var(--label-color);
  display: block;
  font-size: 0.9rem;
  margin-bottom: 0.5rem;
}

/*************** right-section ***************/
.right-section {
  flex: 1;
  background-color: var(--btn-color);
  margin: 1.25rem;
  border-radius: 1rem;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.text-container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding: 1rem;
}

.text-box {
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.text {
  color: #fff;
  font-size: 0.9rem;
  display: flex;
  flex-direction: column;
  gap: 0.25rem;
}
.text-box p {
  font-size: 2rem;
  font-weight: bold;
  margin: 0;
  color: var(--btn-hover-color);
}

.text span:last-child {
  color: #cac9c9;
  font-size: 0.75rem;
}

.right-section button {
  border: 0;
  border-radius: 0.25rem;
  padding: 10px;
  font-weight: bold;
  cursor: pointer;
  background-color: #449393;
  color: #09504e;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
  transition: 0.2s;
}
.right-section button:hover {
  background: var(--btn-hover-color);
  color: var(--btn-color);
}
.right-section button:active {
  box-shadow: 0 1px 15px rgba(0, 0, 0, 0.2);
}

@media screen and (max-width: 768px) {
  .inner-container {
    flex-direction: column;
    width: 85vw;
  }
  .right-section {
    gap: 2rem;
  }
}

@media screen and (max-width: 480px) {
  .title {
    margin-bottom: 1rem;
  }
  .inner-container {
    flex-direction: column;
    width: 95vw;
  }
  .btns {
    grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
  }
  .bill-input label,
  .people-input label,
  .tips p {
    font-size: 1.25rem;
  }
  .bill-input input,
  .people-input input {
    padding: 15px 35px;
  }
  .btns button,
  .right-section button {
    padding: 15px;
  }
  .text span {
    font-size: 1rem;
  }
  .text span:last-child {
    font-size: 0.9rem;
  }
}

